feat(fixes): typos

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -14,7 +14,7 @@ Szakdolgozatom célja egy élőzenei produkció hangrendszerének megtervezése,
 kiépítése, optimalizálása és beüzemelése, mely a Dante protokollra 
 építkezik. Az Audio over IP rendszerek, különösen a Dante hálózatok, 
 lehetőséget nyújtanak a hagyományos analóg hangrendszerekhez 
-képes gyorsabb, megbízhatóbb és skálázhatóbb megoldások alkalmazására. 
+képest gyorsabb, megbízhatóbb és skálázhatóbb megoldások alkalmazására. 
 
 Az 1. fejezet bevezeti a szakdolgozat témáját és eredetét,
 miért is ezt a témát választottam.
@@ -49,7 +49,7 @@ Az eredmények alapján további fejlesztési lehetőségeket
 javaslok, melyek még tovább növelhetik a rendszer teljesítményét és rugalmasságát.
 
 Az általam bemutatott rendszer lényeges előnyöket nyújt egy analóg 
-hangrendszerekkel szemben.
+hangrendszerrel szemben.
 Az üzemeltetési tapasztalatok azt igazolják, hogy 
 az Audio over IP technológiák, különösen a Dante, 
 stabil, skálázható és megbízható megoldást 
