--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -274,8 +274,8 @@ lehetnek, a kis asztali hangszóróktól kezdve a nagyobb DJ-rendszerekig.
 	\end{minipage}
 \end{figure}
 %----------------------------------------------------------------------------
-A Line Array rendszerek ezzel szemben több dobozból állnak, amelyek egymáshoz képest függőlegesen vannak elrendezve.
-Minden doboz több kisebb hangszórót tartalmaz. Amikor ezek a dobozok sorba vannak állítva, 
+A Line Array rendszerek ezzel szemben több szegmensből állnak, amelyek egymáshoz képest függőlegesen vannak elrendezve.
+Minden láda több-kisebb hangszórót tartalmaz. Amikor ezek a komponensek sorba vannak állítva, 
 együtt működnek egy hatékony és kontrollált hangzás előállításában, amely sokkal könnyebben irányítható. 
 A Line Array rendszerek ideálisak nagyobb eseményekhez vagy szabadtéri koncertekhez, mivel képesek 
 nagyobb területet lefedni. Az ilyen rendszerek vezérlése lehetővé 
