feat(fixes): typos

--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -35,7 +35,7 @@ stabilan kihagyás nélkül működött a teljes üzemidő alatt.
 %----------------------------------------------------------------------------
 A Dante networking keresztrendszer lehetővé teszi a rendszerünk folyamatos bővítését a
 hálózati limitációk megfelelő kezelésével. Bővítésekor figyelembe kell venni a
-még rendelkezésre álló, a sávszélességet és a késleltetést mértékét. Amennyiben
+még rendelkezésre álló, a sávszélességet és a késleltetés mértékét. Amennyiben
 tarjuk magunkat ezekhez a paraméterekhez, bővítése nem okozhat problémát,
 és megfelelő overhead mellett elméletileg a teljes hálózatot is szaturálhatjuk mindenféle probléma nélkül.
 A Martin Audio Wavefront sorozatú hangfalak skálázható felbontása lehetővé teszi, hogy
@@ -59,9 +59,9 @@ mintavételezési frekvencián működik. Ezáltal a hangminőség jelentősen j
 valamint így integrálhatóvá válna direkt módon a Dante hálózaton keresztül a keverőbe, így
 nem lenne szükség a hangot analóg jelekké alakítani, majd vissza. Ezáltal a hangminőség még 
 kevésbé romlik.
-Mint ez eddigi Dante eszközünket, ezt is a Dante Controller segítségével könnyen konfigurálhatjuk, akár egy fixen
+Mint az eddigi Dante eszközünket, ezt is a Dante Controller segítségével könnyen konfigurálhatjuk, akár egy fixen
 kijelölt csatornatartományban, amelyet a keverőpulton is könnyen beállíthatunk. Így mikor rendezvényre érkezünk,
-plug and play módon azonnal használhatjuk a mikrofonokat, nem kell a csatornákat újra össze párosítani.
+plug and play módon azonnal használhatjuk a mikrofonokat, nem kell a csatornákat újra összepárosítani.
 A Shure Wireless Workbench segítségével a mikrofonokat könnyen monitorozhatjuk, és a rendszer
 állapotát is ellenőrizhetjük távolról is. Ez a bővítés jelentős költségekkel jár, így a
 bővítés előtt alaposan mérlegelni kell, hogy valóban szükséges-e.
@@ -147,7 +147,7 @@ a Dante alapú hálózati audió rendszerekkel.
 \subsubsection{Martin Audio WPL LineArray rendszer} % Nagyobb rendezvényekre
 %----------------------------------------------------------------------------
 Amennyiben egy sokkal nagyobb rendezvényről van szó, és a jelenlegi rendszerünk már nem
-tudná lefedni a területet, akkor a egy nagyobb szériás LineArray beszerzése is szükséges lehet. A
+tudná lefedni a területet, akkor egy nagyobb szériás LineArray beszerzése is szükséges lehet. A
  Martin Audio WPL sorozatú ládái a jelenleg
 elérhető legnagyobb terméke a Wavefront Precision sorozatban. 
 Ebben az esetben a fő rendszert a WPL képviselné és WPC lenne az in-out fill.
@@ -170,7 +170,7 @@ esetben a 64x64-es Dante interfész már nem elegendő, mivel a zenekar tagjaina
 meghaladja a csatornaszámot. Ebben az esetben a rendszer bővítésére van szükség.
 Így az Allen \& Heath SQ sorozatú keverőpultjai már nem elegendőek, mivel ezekbe a keverőkbe ez az interfész a maximális.
 Ebben az esetben egy nagyobb csatornaszámú keverőpultot kell választanunk, amelyek közül a
-az Avantis és a dLive sorozatú keverők jöhetnek szóba. Ezek a keverők már kaphatóak
+az Avantis és a dLive sorozatú keverők jöhetnek szóba. Ezek már kaphatóak
 128x128-as Dante interfésszel is, így megnövelve a csatornaszámot. Azonban ezek a keverők
 jelentősen magasabb árkategóriába tartoznak, mint az SQ sorozatú keverők, így a bővítés
 költsége is nagyobb lesz. A keverőpultok fejlesztése mellett szükséges további
