feat(fixes): typos

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -159,6 +159,20 @@
   note = {Megnyitva: 2024.09.17.}
 }
 
+@misc {DIGITALSIGNALPROCESSING,
+  author = {Pető Andrea},
+  title = {Kétcsatornás tömörített és tömörítetlen digitális hangjelek minőségi vizsgálata },
+  url = {http://vip.tilb.sze.hu/~wersenyi/PAND.pdf},
+  note = {Megnyitva: 2024.11.11.}
+}
+
+@misc {SOUNDPRESSURELEVEL,
+  author = {Geers},
+  title = {Hangerő és decibel},
+  url = {https://www.geers.hu/blog/hallasvedelem/hangero-es-decibel/},
+  note = {Megnyitva: 2024.11.11.}
+}
+
 
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
