--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -72,8 +72,6 @@ Egy példa a kondenzátor mikrofonra a Shure SM137 kondenzátor mikrofon, amely 
 % ----------------------------------------------------------------------------
 \end{comment}
 
-% ⛔📝 TODO: Merge text formatting and content integration check
-
 %----------------------------------------------------------------------------
 \section{Az analóg kezdetek} % Kezdeti analóg rendszerek, skálázhatósági hátrányok, analog rendszerek korlátai, működési alapelvek, technológiai háttér  
 %----------------------------------------------------------------------------
@@ -93,7 +91,7 @@ Ezek az alkatrészek feleltek a jel szűréséért, erősítéséért és átala
 Azonban ezek az elemek gyakran voltak érzékenyek a környezeti hatásokra, mint például a hőmérséklet-ingadozások és a páratartalom, 
 amelyek további kihívások elé állították a hangmérnököket.
 %----------------------------------------------------------------------------
-\section{Digitális térhódítás} % Miért digitális irányba fejlesztünk és halad az ipar? Miért jobb mint az analog? 
+\section{Digitális térhódítás~\cite{DIGITALSIGNALPROCESSING}} % Miért digitális irányba fejlesztünk és halad az ipar? Miért jobb mint az analog? 
 %----------------------------------------------------------------------------
 A digitális technológia térhódítása a professzionális audio rendszerekben jelentős paradigmaváltást hozott az audioiparban. 
 Az utóbbi évtizedekben a digitális rendszerek folyamatosan felváltották az analóg megoldásokat, számos előnnyel rendelkezve, 
@@ -195,7 +193,7 @@ Az ADC (Analog-to-Digital Converter) konverter az analóg hangjeleket digitális
 konverter a digitális jeleket visszaalakítja analóg hangjelekké. 
 A professzionális ADC és DAC konverterek nagymértékben befolyásolják a hangminőséget.
 %----------------------------------------------------------------------------
-\section{Hangerősség és hangnyomásszint} % Mi a hangerősség és a hangnyomásszint? Hogyan mérjük őket? Mi a különbség közöttük?
+\section{Hangerősség és hangnyomásszint~\cite{SOUNDPRESSURELEVEL}} % Mi a hangerősség és a hangnyomásszint? Hogyan mérjük őket? Mi a különbség közöttük?
 %----------------------------------------------------------------------------
 Hangerőség (Intenzitás):
 A hangerősség az a szubjektív hangosságérzet, amely a fizikai hangnyomás szintjétől függ. 
@@ -285,7 +283,7 @@ hang egy adott területre való fókuszálása a helyszínen.
 Míg a pontsugárzó hangszórók a hangot minden irányba szórják, addig a Line Array hangszórók a hangot meghatározott területekre irányítják. 
 A pontsugárzók inkább kisebb rendezvényekhez ajánlottak, míg a Line Array rendszerek nagyobb helyszínekhez vagy szabadtéri eseményekhez ideálisak.
 %----------------------------------------------------------------------------
-\subsection{LineArray DSP-vezérelt irányítás~\cite{AHNERT2023}}
+\subsection{LineArray DSP-vezérelt irányítás}
 %----------------------------------------------------------------------------
 A hangosító rendszerek tervezésének fő célja, hogy a közönség számára kiváló minőségű hangzást biztosítson. 
 A kiváló hangzás alatt egyenletes hangerejű, homogén frekvenciaválaszú, alacsony torzítással rendelkező és mindenhol jól érthető hangot értünk. 
