--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -965,7 +965,7 @@ is, ha az óra perceken keresztül teljesen eltűnik.
 \end{figure}
 \end{comment}
 %----------------------------------------------------------------------------
-\subsection{Összehasonlítás a hagyományos hangrendszerekkel}
+\subsection{Összehasonlítás a hagyományos hangrendszerekkel~\cite{AHNERT2023}}
 %----------------------------------------------------------------------------
 A hagyományos hangrendszerek általában analóg kábeleken és csatlakozókon alapulnak 
 a hangjelek eszközök közötti továbbítására. E rendszerek gyakran korlátozottak 
