feat(fixes): typos

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -68,33 +68,35 @@ kínál a modern élőzenei produkciók számára.
 %\addcontentsline{toc}{chapter}{Abstract}
 
 The goal of my thesis is to design, build, optimize, and commission a sound system for 
-a live music production, based on the Dante protocol. Audio over IP systems, 
-particularly Dante networks, offer faster, more reliable, and scalable 
-solutions compared to traditional analog sound systems.
+a live music production based on the Dante protocol. Audio over IP systems, particularly 
+Dante networks, offer faster, more reliable, and scalable solutions compared to traditional analog sound systems.
 
 Chapter 1 introduces the topic and origin of the thesis, explaining why I chose this subject.
 
-Chapter 2 presents the basic concepts and systems of sound engineering, including 
+Chapter 2 presents the fundamental concepts and systems of sound technology, including 
 the differences between analog and digital sound systems.
 
-Chapter 3 aims to thoroughly explain the fundamentals of digital audio systems and 
-the technical details of the Dante protocol. This chapter covers methods for IP 
-address allocation, network topology design, and the roles of various network devices, such as switches.
+The purpose of Chapter 3 is to provide an in-depth overview of the fundamentals of 
+digital audio systems and the technical details of the Dante protocol. This chapter 
+includes topics such as methods for assigning IP addresses, designing network 
+topologies, and the roles of various network devices, such as switches.
 
-Chapter 4 discusses the design and installation process, with a particular focus on 
-the equipment used, such as audio processors, power amplifiers, and loudspeakers. 
-In addition to the installation of the Dante-based network, special attention is given to optimizing sound quality. The reliability and flexibility of the system are also evaluated during testing in a real-world environment.
+Chapter 4 discusses the design and installation process, with special emphasis on 
+the equipment used, such as sound processors, amplifiers, and speakers. 
+In addition to building the Dante-based network, I focus on optimizing sound quality 
+during installation. During real-world testing, I evaluate the reliability and flexibility of the system.
 
-Chapter 5 addresses the operational experiences post-installation. I provide a 
-detailed account of integrating the system into a live music production 
-by TéDé Rendezvények, where I tested the performance of the Dante network in real time. 
-This chapter also discusses the importance of integrating sound systems and 
-control systems, as well as addressing acoustic and network challenges 
-encountered during the performance. Based on the results, I suggest further 
-improvements that could enhance the system's performance and flexibility.
+Chapter 5 covers the operational experiences after installation. It details the 
+integration of the system into a live music production by TéDé Rendezvények, where 
+I tested the performance of the Dante network in real-time. 
+This section highlights the importance of integrating the sound system with 
+control systems and addresses the acoustic and network challenges encountered 
+during the performance. Based on the results, I propose further development 
+opportunities to enhance the system's performance and flexibility.
 
 The system I present offers significant advantages over analog sound systems. 
-Operational experiences confirm that Audio over IP technologies, particularly Dante, provide a stable, scalable, and reliable solution for modern live music productions.
+Operational experiences confirm that Audio over IP technologies, particularly 
+Dante, provide a stable, scalable, and reliable solution for modern live music productions.
 
 \vfill
 \selectthesislanguage
