--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -184,3 +184,14 @@ stageboxokat is beszerezni az igényelt csatornaszám eléréséhez.
     \label{fig:dLive_S7000}
 \end{figure}
 %----------------------------------------------------------------------------
+% Ide egy szép barokk körmondatot kéne írni arról, hogy további tanulmányaim során (mesterképzés vagy doktori) szeretném továbbfejleszteni a rendszert, és további kutatásokat végezni a témában.
+%----------------------------------------------------------------------------
+\section{Összefoglalás}
+%----------------------------------------------------------------------------
+Jelenlegi munkám során megalkotott és optimalizált rendszerre alapozva,
+további tanulmányaim, legyen az egy mesterképzés vagy egy doktori kutatás
+keretein belül, célom nem csupán a rendszer továbbfejlesztése, hanem a témában
+rejlő további lehetőségek feltárása, a technológia alkalmazhatóságának
+kiterjesztése, valamint az e téren szerzett tudományos ismeretek bővítése is,
+amelyek mind hozzájárulhatnak az audiorendszerek és az élő zenei produkciók új
+szintre emeléséhez.
