feat(style): general

--- a/include/declaration.tex
+++ b/include/declaration.tex
@@ -5,8 +5,8 @@
 %--------------------------------------------------------------------------------------
 % Nyilatkozat
 %--------------------------------------------------------------------------------------
-\chapter*{Nyilatkozat}
-
+\includepdf{figures/nyilatkozat.pdf}
+\begin{comment}
 \noindent
 Alulírott, \textbf{\szerzoVezeteknev{} \szerzoKeresztnev{} (\szerzoNeptun)}, \szak{} szakos hallgató kijelentem, hogy a \textit{\cim} című \MakeLowercase{\doktipus{}} feladat kidolgozása a saját munkám, abban csak a megjelölt forrásokat, és a megjelölt mértékben használtam fel, az idézés szabályainak megfelelően, a hivatkozások pontos megjelölésével.
 
@@ -26,6 +26,7 @@ Eredményeim saját munkán, számításokon, kutatáson, valós méréseken ala
 	\makebox[7cm][c]{\emph{\szerzoVezeteknev{} \szerzoKeresztnev}}\\
 	\makebox[7cm]{hallgató}
 \end{multicols}
+\end{comment}
 
 \thispagestyle{empty}
 
